# test-2

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Analyzer/: AutoSuggest.cpp  AutoSuggest.h  FeatureExtractor.h
Source/Processors/: AutoGain.cpp  AutoGain.h  DeEsser.cpp  DeEsser.h  Denoiser.cpp  Denoiser.h  HPF.cpp  HPF.h  OneKnobSaturator.cpp  OneKnobSaturator.h
